# homework7

./: README.md
.github/workflows/: workflow7.yaml
src/: CMakeLists.txt  bulk.cpp  bulk.h  test1.sh  test2.sh  test3.sh  test4.sh
